# comfyui-on-amazon-sagemaker

./: pyproject.toml
image/code/: api_server.py  nginx.conf
lambda/: lambda_function.py  test.py
